@@ -1079,7 +1079,7 @@ Revision history for Perl extension Imager.
 - the FT1.x driver now supports the align parameter correctly.
   Tests were added to each driver to check correct handling of the align
   parameter.
-- the Win32 font driver bounding_box() method now puts accuarate values
+- the Win32 font driver bounding_box() method now puts accurate values
   in the ascent and descent values, previously they were set to the 
   font ascent/descent rather than the values specific to the string.
 - supplying align=>0 to the win32 font driver string() function 
@@ -1102,6 +1102,8 @@ Revision history for Perl extension Imager.
   compiler, MinGW can be used to build Imager.
 - fixed an inverted condition checking the giflib version, and 
   replaced a manual test skip in t/t105gif.t
+- add tests to exercise hatch fills for floating images.  This code is
+  mis-generated with the gcc 4.0 that ships with OS X 10.4
 
 =================================================================
 
